--- a/index.html
+++ b/index.html
@@ -2,12 +2,36 @@
 
 <head> 
   <title>Example Website w/ GitHub Pages</title>
+<style>
+body{
+padding:5px;
+font-family:sans-serif;
+}
+em{
+font-size:1.5em;
+color:red;
+}
+strong{
+font-size:1.1em;
+color:darkblue;
+}
+ul{
+background-color:lightgray;
+font-size:0.8em;
+margin:10px;
+padding:5px;
+border-radius:25px;
+}
+li{
+margin-bottom:5px;
+}
+</style>
 </head>
 
 <body>
 
   <h1>Example Website w/ GitHub Pages</h1>
-  <p>Lorem Ipsum is simply <em>dummy text</em> of the printing and typesetting industry. Lorem Ipsum has been the industry's standard <strong>dummy text</strong> ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+  <p>Lorem Ipsum is simply <em>dummy text</em> of the printing and typesetting industry. Lorem Ipsum has been the industry's standard <strong>dummy text</strong> ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining <em>essentially</em> unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
   <ul>
 <li>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</li>
